--- a/lib/style.css
+++ b/lib/style.css
@@ -1,8 +1,10 @@
 #gallery-plugin.prompt{
 	position: absolute;
 	left: 40%;
-	top: 40%;
+	top: 200px;
 	display: none;
 	background: #ffffff;
-	padding: 10px;
+	padding: 15px;
+	text-align: center;
+	box-shadow: 0px 0px 3px #999999;
 }
